--- a/react-app/src/assets/sass/base/_animations.sass
+++ b/react-app/src/assets/sass/base/_animations.sass
@@ -37,3 +37,14 @@
     100%
         transform: translate(0)
 
+// Slide in from left animation
+// ---------------------------------
+.moveInFromLeft
+    animation: moveInFromLeft 1s
+
+@keyframes moveInFromLeft
+    0%
+        transform: translateX(-100%)
+
+    100%
+        transform: translate(0)
