--- a/react-app/src/assets/sass/base/_typography.sass
+++ b/react-app/src/assets/sass/base/_typography.sass
@@ -26,3 +26,10 @@ body
 
     @include respond-to(XXS)
         font-size: 7rem
+
+.heading-secondary
+    font-size: 5.5rem
+    font-weight: 300
+
+    @include respond-to(L)
+        font-size: 4rem
