--- a/react-app/src/assets/sass/components/_search.sass
+++ b/react-app/src/assets/sass/components/_search.sass
@@ -16,6 +16,9 @@
         font-size: 1.4rem
         line-height: 2.6
 
+        &:focus
+            outline: none
+
         &--active
             width: 30rem
             opacity: 1
