--- a/react-app/src/assets/sass/abstracts/_variables.sass
+++ b/react-app/src/assets/sass/abstracts/_variables.sass
@@ -6,6 +6,7 @@ $color-primary-light: rgb(22, 22, 25)
 $color-white: rgb(255, 255, 255)
 
 $color-grey-light: rgb(227, 231, 232)
+$color-grey-dark: rgb(127, 132, 135)
 
 // Grey line
 // ---------------------------------
