--- a/react-app/src/assets/sass/base/_base.sass
+++ b/react-app/src/assets/sass/base/_base.sass
@@ -9,13 +9,18 @@ html
     // 1rem = 10px; 10px/16px = 62.5%
     font-size: 62.5%
 
-    //// 1rem = 9px; 9px/16px = 56.25%
-    //@include respond-to(S)
-    //    font-size: 56.25%
+    // 1rem = 9.5px; 9.5px/16px = 59.37%
+    @include respond-to(L)  // 1200px
+        font-size: 59.37%
 
-    //// 1rem = 8px; 8px/16px = 50%
-    //@include respond-to(S)
-    //    font-size: 50%
+    // 1rem = 9px; 9px/16px = 56.25%
+    @include respond-to(S)  // 800px
+        font-size: 56.25%
+
+    // 1rem = 8px; 8px/16px = 50%
+    @include respond-to(XXXS)   // 400px
+        font-size: 50%
 
 body
     box-sizing: border-box
+
