--- a/react-app/src/assets/sass/components/_dropdown.sass
+++ b/react-app/src/assets/sass/components/_dropdown.sass
@@ -35,7 +35,7 @@
 
     &__box
         display: flex
-        align-items: end
+        align-items: flex-end
         padding: 1.5rem
 
     &__icon
@@ -43,6 +43,7 @@
         height: 1.6rem
         margin-left: 0.6rem
         transition: transform 0.4s
+        fill: $color-primary
 
 
 
