--- a/react-app/src/assets/sass/layout/_sideDrawer.sass
+++ b/react-app/src/assets/sass/layout/_sideDrawer.sass
@@ -1,13 +1,12 @@
 .side-drawer
     display: grid
-    position: relative
+    position: fixed
     z-index: 20
-    grid-column: side-start / center-start
-    grid-row: 1 / 3
     grid-template-rows: repeat(12, max-content)
     align-items: center
     justify-items: start
     width: 40rem
+    height: 100%
     padding: 0 1rem
     overflow: scroll
     transform: translateX(-100%)
@@ -15,15 +14,22 @@
     background-color: $color-white
 
     &--open
-        z-index: 200
+        z-index: 2000
         transform: translateX(0)
 
         @include respond-to(L-min)
             display: none
 
         @include respond-to(XXXS)
-            grid-row: 2 / 3
             width: 100vw
+
+    &__mobile-header
+        display: none
+
+        @include respond-to(XXXS)
+            display: block
+            width: calc(100% + 2rem)
+            transform: translateX(-1rem)
 
     &__divider
         width: calc(100% - 3rem)
