--- a/react-app/src/assets/sass/main.sass
+++ b/react-app/src/assets/sass/main.sass
@@ -16,7 +16,9 @@
 @import 'components/dropdown'
 @import 'components/navIcon'
 @import 'components/navigation'
+@import 'components/productCard'
 @import 'components/search'
+@import 'components/slider'
 
 // Import layout
 @import 'layout/header'
@@ -24,4 +26,9 @@
 
 // Import pages
 @import 'pages/home'
+
+
+
+
+
 
