--- a/react-app/src/assets/sass/abstracts/_maps.sass
+++ b/react-app/src/assets/sass/abstracts/_maps.sass
@@ -1,6 +1,7 @@
 // Responsive breakpoints
 // 1em = 16px
-// $breakpoint arguments
+
+// $breakpoint arguments:
 // L: 1200px / 16px = 75em
 // M: 1000px
 // S: 800px
