--- a/react-app/src/assets/sass/base/_utilities.sass
+++ b/react-app/src/assets/sass/base/_utilities.sass
@@ -5,13 +5,16 @@
 
 // Bottom margins
 // ---------------------------------
-.u-margin-bottom-small
+.u-margin-bottom-xs
     margin-bottom: 1.5rem !important
+    
+.u-margin-bottom-s
+    margin-bottom: 3rem !important
 
-.u-margin-bottom-medium
-    margin-bottom: 4rem !important
+.u-margin-bottom-m
+    margin-bottom: 5rem !important
 
-.u-margin-bottom-big
+.u-margin-bottom-xl
     margin-bottom: 8rem !important
 
 // Display: none
