--- a/react-app/src/assets/sass/main.sass
+++ b/react-app/src/assets/sass/main.sass
@@ -19,6 +19,7 @@
 @import 'components/productCard'
 @import 'components/search'
 @import 'components/slider'
+@import 'components/timer'
 
 // Import layout
 @import 'layout/header'
@@ -26,8 +27,6 @@
 
 // Import pages
 @import 'pages/home'
-
-
 
 
 
