Building promo section and footer

--- a/react-app/src/assets/sass/abstracts/_maps.sass
+++ b/react-app/src/assets/sass/abstracts/_maps.sass
@@ -2,11 +2,12 @@
 // 1em = 16px
 
 // $breakpoint arguments:
+// XL: 1300px
 // L: 1200px / 16px = 75em
 // M: 1000px
 // S: 800px
 // XS: 600px
 // XXS: 500px
 // XXXS: 400px
-$breakpoints: (L: (max-width: 75em), L-min: (min-width: 75em), M: (max-width: 62.5em), S: (max-width: 50em), XS: (max-width: 37.5em), XXS: (max-width: 31.25em), XXXS: (max-width: 25em))
+$breakpoints: (XL: (max-width: 81.25em), L: (max-width: 75em), L-min: (min-width: 75em), M: (max-width: 62.5em), S: (max-width: 50em), XS: (max-width: 37.5em), XXS: (max-width: 31.25em), XXXS: (max-width: 25em))
 
