--- a/react-app/src/assets/sass/base/_typography.sass
+++ b/react-app/src/assets/sass/base/_typography.sass
@@ -23,7 +23,7 @@ body
 
     @include respond-to(L)
         font-size: 15rem
-        
+
     @include respond-to(M)
         font-size: 15rem
 
@@ -45,11 +45,12 @@ body
 
     @include respond-to(L)
         font-size: 10rem
-        
+
     @include respond-to(M)
         font-size: 6rem
 
 .heading-quaternary
+    position: relative
     font-size: 1.3rem
     font-weight: 900
     letter-spacing: 0.5px
@@ -64,8 +65,8 @@ body
         display: inline-block
         width: 2rem
         margin-right: 1rem
+        transition: border-bottom 0.3s
         border-bottom: 2px solid $color-white
-        color: $color-white
 
 
 
