--- a/react-app/src/assets/sass/layout/_header.sass
+++ b/react-app/src/assets/sass/layout/_header.sass
@@ -1,7 +1,7 @@
 .header
     display: grid
     position: relative
-    grid-column: side-start / center-end
+    grid-column: side-start / side-right-end
     grid-row: 1 / 2
     grid-template-columns: 12rem repeat(2, 1fr)
 
