--- a/react-app/src/assets/sass/main.sass
+++ b/react-app/src/assets/sass/main.sass
@@ -17,17 +17,15 @@
 @import 'components/navIcon'
 @import 'components/navigation'
 @import 'components/productCard'
+@import 'components/productCardBig'
 @import 'components/search'
 @import 'components/slider'
 @import 'components/timer'
 
 // Import layout
+@import 'layout/footer'
 @import 'layout/header'
 @import 'layout/sideDrawer'
 
 // Import pages
 @import 'pages/home'
-
-
-
-
