--- a/react-app/src/assets/css/style.css
+++ b/react-app/src/assets/css/style.css
@@ -110,6 +110,7 @@ body {
       font-size: 6rem; } }
 
 .heading-quaternary {
+  position: relative;
   font-size: 1.3rem;
   font-weight: 900;
   letter-spacing: 0.5px;
@@ -122,8 +123,8 @@ body {
     display: inline-block;
     width: 2rem;
     margin-right: 1rem;
-    border-bottom: 2px solid white;
-    color: white; }
+    transition: border-bottom 0.3s;
+    border-bottom: 2px solid white; }
 
 .u-margin-top-small {
   margin-bottom: 2.5rem !important; }
@@ -142,11 +143,19 @@ body {
 
 @media only screen and (max-width: 75em) {
   .u-display-none-l {
-    display: none; } }
+    display: none !important; } }
+
+@media only screen and (max-width: 62.5em) {
+  .u-display-none-m {
+    display: none !important; } }
+
+@media only screen and (max-width: 50em) {
+  .u-display-none-s {
+    display: none !important; } }
 
 @media only screen and (max-width: 37.5em) {
   .u-display-none-xs {
-    display: none; } }
+    display: none !important; } }
 
 .carousel {
   display: flex;
@@ -422,6 +431,13 @@ body {
     opacity: 1; }
   .productCard:hover .slider__btn {
     opacity: 1; }
+  @media only screen and (max-width: 50em), only screen and (hover: none) {
+    .productCard {
+      box-shadow: 0 0.8rem 1.2rem 0 rgba(0, 0, 0, 0.1); }
+      .productCard:hover .productCard__summary {
+        transform: translateY(0); }
+      .productCard .slider__btn {
+        opacity: 1; } }
   .productCard__img {
     z-index: -10;
     width: 100%; }
@@ -430,6 +446,9 @@ body {
     height: 8rem;
     transition: transform 0.4s;
     background-color: white; }
+    @media only screen and (max-width: 50em) {
+      .productCard__summary {
+        height: 12.5rem; } }
   .productCard__title {
     padding: 2rem;
     font-size: 1.5rem;
@@ -449,6 +468,10 @@ body {
     transform: translateY(50%);
     transition: transform 0.4s cubic-bezier(1, 0, 0, 1), opacity 0.4s cubic-bezier(1, 0, 0, 1);
     opacity: 0; }
+    @media only screen and (max-width: 50em) {
+      .productCard__buttons {
+        transform: translateY(0);
+        opacity: 1; } }
   .productCard__btn {
     margin-left: 1rem;
     padding: 1rem;
@@ -467,9 +490,6 @@ body {
     display: flex;
     align-items: center;
     margin-right: 1rem; }
-    @media only screen and (max-width: 37.5em) {
-      .productCard__icon-box--dn-XS {
-        display: none; } }
   .productCard__icon {
     width: 4rem;
     height: 4rem;
@@ -480,6 +500,60 @@ body {
     cursor: pointer; }
     .productCard__icon:hover {
       background-color: #e3e7e8; }
+
+.productCardBig {
+  position: relative;
+  overflow: hidden;
+  color: white;
+  cursor: pointer; }
+  .productCardBig:hover .productCardBig__img {
+    transform: scale(1.1); }
+  .productCardBig__img {
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: transform 1s;
+    background: no-repeat center;
+    background-size: cover; }
+  .productCardBig__box {
+    display: grid;
+    position: absolute;
+    top: 0;
+    left: 0;
+    grid-template-rows: 1fr 7rem 6rem;
+    height: 100%;
+    padding: 4rem; }
+    @media only screen and (max-width: 50em) {
+      .productCardBig__box {
+        padding: 2rem; } }
+  .productCardBig__btn {
+    box-sizing: content-box;
+    align-self: start;
+    width: fit-content;
+    padding: 1rem 2rem;
+    transform: translate(-2rem, -1rem);
+    transition: color 0.3s;
+    border: none;
+    background-color: transparent;
+    color: currentColor;
+    cursor: pointer; }
+    .productCardBig__btn:hover {
+      color: black; }
+    .productCardBig__btn:hover .dash__line {
+      border-bottom: 2px solid black; }
+    .productCardBig__btn:focus, .productCardBig__btn:active {
+      outline: none; }
+  .productCardBig__title {
+    font-size: 4rem; }
+    @media only screen and (max-width: 50em) {
+      .productCardBig__title {
+        font-size: 3.5rem; } }
+  .productCardBig__price {
+    font-size: 2.3rem;
+    font-weight: 700; }
+    @media only screen and (max-width: 50em) {
+      .productCardBig__price {
+        font-size: 2rem; } }
 
 .search {
   display: flex;
@@ -580,10 +654,117 @@ body {
     letter-spacing: 0.5px;
     text-transform: uppercase; }
 
+.footer {
+  display: grid;
+  grid-column: full-start / side-right-end;
+  grid-template-columns: 1fr max-content;
+  grid-gap: 2rem;
+  padding: 6rem 0 4rem;
+  background-color: white;
+  color: black; }
+  .footer__nav {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(max-content, 1fr));
+    align-items: center;
+    justify-items: start;
+    list-style: none; }
+  .footer__contact-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center; }
+  .footer__main-box {
+    display: grid;
+    grid-column: 1 / -1;
+    grid-template-columns: repeat(2, 1fr); }
+  .footer__left-items {
+    display: grid;
+    grid-gap: 5rem; }
+  .footer__right-items {
+    display: grid;
+    grid-gap: 5rem;
+    justify-items: end; }
+  .footer__dropdown {
+    display: flex;
+    align-items: center;
+    margin-right: -1.5rem;
+    font-size: 1.6rem; }
+  .footer__social-box {
+    display: grid;
+    grid-template-columns: repeat(4, min-content);
+    grid-gap: 1rem;
+    margin-left: -1.2rem; }
+  .footer__text {
+    font-size: 1.4rem;
+    line-height: 1.5; }
+    .footer__text:not(:last-child) {
+      margin-bottom: 2rem; }
+  .footer__img {
+    display: block;
+    height: 100%; }
+  .footer__divider {
+    grid-column: 1 / -1;
+    margin: 1.5rem 0;
+    border: none;
+    border-bottom: 1px solid #e3e7e8; }
+  .footer__item {
+    padding: 2rem 0; }
+  .footer__link:link, .footer__link:visited {
+    display: inline-block;
+    position: relative;
+    color: black;
+    font-size: 1.6rem;
+    text-align: center;
+    text-decoration: none; }
+    .footer__link:link::before, .footer__link:visited::before {
+      content: '';
+      display: inline-block;
+      position: absolute;
+      bottom: -1rem;
+      left: 0;
+      width: 100%;
+      height: 0.5px;
+      transform: scaleX(0);
+      transform-origin: 100% 50%;
+      transition: transform 0.3s;
+      background-color: black; }
+  .footer__link:hover::before, .footer__link:focus::before, .footer__link:active::before {
+    transform: scaleX(1);
+    transform-origin: 0 50%; }
+  @media only screen and (max-width: 75em) {
+    .footer {
+      grid-column: side-start / -1;
+      padding: 6rem 4rem 4rem; } }
+  @media only screen and (max-width: 50em) {
+    .footer {
+      grid-template-columns: 1fr;
+      padding: 6rem 2rem 4rem; }
+      .footer__nav {
+        grid-template-columns: repeat(3, minmax(max-content, 1fr));
+        justify-items: center; }
+      .footer__contact-box {
+        align-items: center; }
+      .footer__main-box {
+        grid-template-columns: 1fr;
+        grid-gap: 2rem; }
+      .footer__left-items, .footer__right-items {
+        justify-items: center; }
+      .footer__left-items {
+        order: 1; } }
+  @media only screen and (max-width: 37.5em) {
+    .footer {
+      padding: 4rem 2rem; }
+      .footer__nav {
+        grid-template-columns: repeat(2, minmax(max-content, 1fr)); }
+      .footer__left-items, .footer__right-items {
+        grid-gap: 3rem; }
+      .footer__item {
+        padding: 1.5rem 0; } }
+
 .header {
   display: grid;
   position: relative;
-  grid-column: side-start / center-end;
+  grid-column: side-start / side-right-end;
   grid-row: 1 / 2;
   grid-template-columns: 12rem repeat(2, 1fr); }
   @media only screen and (max-width: 75em) {
@@ -695,16 +876,21 @@ body {
     color: black;
     font-size: 1.6rem; }
   .side-drawer__icons-box {
-    display: flex;
-    padding: 0.5rem 1.5rem 1.5rem 0.3rem; }
+    display: grid;
+    grid-template-columns: repeat(4, min-content);
+    grid-gap: 1rem;
+    padding: 0.5rem 0 1.5rem 1.5rem; }
 
 .container {
   display: grid;
-  grid-template-columns: [side-start] 6rem [side-end full-start] 6rem [center-start] repeat(8, [col-start] 1fr [col-end]) [center-end] 6rem [full-end];
-  grid-template-rows: 12rem calc(100vh - 12rem) min-content 60vw; }
+  grid-template-columns: [side-start] 6rem [side-end full-start] 6rem [center-start] repeat(8, [col-start] 1fr [col-end]) [center-end side-right-start] 6rem [side-right-end] 6rem [full-end];
+  grid-template-rows: 12rem calc(100vh - 12rem) min-content 50vw; }
   @media only screen and (max-width: 75em) {
     .container {
-      grid-template-rows: 6rem calc(100vh - 6rem) repeat(2, min-content); } }
+      grid-template-rows: 6rem calc(100vh - 6rem) min-content 60vw; } }
+  @media only screen and (max-width: 50em) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem); } }
 
 .sidebar {
   display: grid;
@@ -721,7 +907,8 @@ body {
     display: none;
     z-index: 0; }
   .sidebar__icons-box {
-    display: grid; }
+    display: grid;
+    grid-gap: 1rem; }
     @media only screen and (max-width: 62.5em) {
       .sidebar__icons-box {
         display: none; } }
@@ -729,7 +916,13 @@ body {
     width: 4rem;
     height: 4rem;
     padding: 0 1.2rem;
+    transition: fill 0.3s, background-color 0.3s;
+    border: 1px solid #e3e7e8;
+    border-radius: 50%;
     fill: black; }
+    .sidebar__icon:hover {
+      background-color: black;
+      fill: white; }
 
 .header-content {
   position: relative;
@@ -777,7 +970,7 @@ body {
 .products {
   display: grid;
   position: relative;
-  grid-column: full-start / center-end;
+  grid-column: full-start / side-right-end;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 5rem;
   padding: 20rem 0;
@@ -852,3 +1045,143 @@ body {
       .deal__small-box {
         grid-gap: 3rem;
         margin-bottom: 6rem; } }
+
+.subscribe {
+  display: grid;
+  grid-gap: 2rem;
+  padding: 6rem 5rem 7rem 7rem;
+  border: 1px solid currentColor;
+  color: black; }
+  @media only screen and (max-width: 81.25em) {
+    .subscribe {
+      padding: 3rem 4rem 4rem; } }
+  @media only screen and (max-width: 62.5em) {
+    .subscribe {
+      padding: 1rem 2rem 2rem; } }
+  .subscribe__title {
+    font-size: 3.5rem;
+    font-weight: 400;
+    letter-spacing: 1px; }
+    @media only screen and (max-width: 50em) {
+      .subscribe__title {
+        font-size: 3rem; } }
+  .subscribe__description {
+    font-size: 1.5rem;
+    line-height: 1.5; }
+  .subscribe__form {
+    display: flex; }
+    @media only screen and (max-width: 75em) {
+      .subscribe__form {
+        flex-direction: column; } }
+  .subscribe__input {
+    flex: 1;
+    width: 100%;
+    height: 6rem;
+    margin-right: 2rem;
+    padding: 1.7rem 2rem;
+    transition: border-width 0.4s;
+    border: 1px solid black;
+    color: inherit;
+    font-family: inherit;
+    font-size: 1.5rem; }
+    @media only screen and (max-width: 75em) {
+      .subscribe__input {
+        margin-bottom: 1.5rem; } }
+    .subscribe__input:focus {
+      border-width: 2px;
+      outline: none; }
+    .subscribe__input:invalid {
+      box-shadow: none; }
+  .subscribe__button {
+    padding: 2rem 5rem;
+    border: none;
+    background-color: black;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 700;
+    cursor: pointer; }
+  .subscribe__left-card, .subscribe__right-card {
+    padding: 12rem 6rem;
+    background-color: white; }
+    @media only screen and (max-width: 75em) {
+      .subscribe__left-card, .subscribe__right-card {
+        padding: 12rem 4rem; } }
+  .subscribe__left-card {
+    grid-column: side-start / col-end 4; }
+    @media only screen and (max-width: 62.5em) {
+      .subscribe__left-card {
+        padding: 12rem 2rem 12rem 4rem; } }
+    @media only screen and (max-width: 50em) {
+      .subscribe__left-card {
+        padding: 6rem 1rem 6rem 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .subscribe__left-card {
+        grid-column: side-start / -1;
+        padding: 6rem 2rem 2rem; } }
+  .subscribe__right-card {
+    display: flex;
+    position: relative;
+    grid-column: col-start 5 / -1;
+    flex-direction: column; }
+    @media only screen and (max-width: 62.5em) {
+      .subscribe__right-card {
+        padding: 12rem 4rem 12rem 2rem; } }
+    @media only screen and (max-width: 50em) {
+      .subscribe__right-card {
+        padding: 6rem 2rem 6rem 1rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .subscribe__right-card {
+        grid-column: side-start / -1;
+        padding: 2rem 2rem 4rem; } }
+  .subscribe__right-card-wrapper {
+    flex: 1;
+    margin-top: -25rem; }
+    @media only screen and (max-width: 50em) {
+      .subscribe__right-card-wrapper {
+        margin-top: 0; } }
+  .subscribe__form-wrapper {
+    display: none;
+    grid-column: side-start / -1;
+    padding: 0 2rem 6rem; }
+    @media only screen and (max-width: 50em) {
+      .subscribe__form-wrapper {
+        display: initial; } }
+
+.promo__left-item, .promo__right-item {
+  display: grid;
+  grid-template-rows: 1fr min-content;
+  justify-items: center;
+  padding: 3rem 1rem 3.5rem;
+  color: black;
+  text-align: center; }
+
+.promo__left-item {
+  grid-column: side-start / col-end 4;
+  background: url("../img/promo-1.jpg") no-repeat center;
+  background-size: cover; }
+  @media only screen and (max-width: 50em) {
+    .promo__left-item {
+      grid-column: side-start / -1; } }
+
+.promo__right-item {
+  grid-column: col-start 5 / -1;
+  background: url("../img/promo-2.jpg") no-repeat center;
+  background-size: cover; }
+  @media only screen and (max-width: 50em) {
+    .promo__right-item {
+      grid-column: side-start / -1; } }
+
+.promo__text {
+  margin: 2.5rem;
+  font-size: 2.2rem;
+  line-height: 1.7; }
+
+.promo__link:link, .promo__link:visited {
+  display: block;
+  padding: 0.7rem 0;
+  border-bottom: 1px solid black;
+  color: black;
+  font-size: 1.3rem;
+  font-weight: 700;
+  text-decoration: none;
+  text-transform: uppercase; }
