--- a/react-app/src/assets/sass/layout/_sideDrawer.sass
+++ b/react-app/src/assets/sass/layout/_sideDrawer.sass
@@ -36,7 +36,6 @@
         margin: 1.5rem
         border: none
         border-bottom: $line
-        
 
     &__text-box
         display: flex
@@ -50,5 +49,7 @@
         font-size: 1.6rem
 
     &__icons-box
-        display: flex
-        padding: 0.5rem 1.5rem 1.5rem 0.3rem
+        display: grid
+        grid-template-columns: repeat(4, min-content)
+        grid-gap: 1rem
+        padding: 0.5rem 0 1.5rem 1.5rem
