Building product details page

--- a/react-app/src/assets/sass/abstracts/_variables.sass
+++ b/react-app/src/assets/sass/abstracts/_variables.sass
@@ -6,9 +6,11 @@ $color-primary-light: rgb(22, 22, 25)
 $color-white: rgb(255, 255, 255)
 
 $color-grey-light: rgb(227, 231, 232)
+$color-grey-light-2: rgb(205, 207, 208)
 $color-grey-dark: rgb(127, 132, 135)
 
 $color-red: rgb(255, 0, 0)
+$color-yellow: rgb(255, 178, 45)
 
 // Font size
 $default-font-size: 1.6rem
