--- a/react-app/src/assets/sass/components/form/_search.sass
+++ b/react-app/src/assets/sass/components/form/_search.sass
@@ -32,12 +32,16 @@
             opacity: 1
             text-indent: 3.2rem
 
+        &--pill
+            margin-right: -4.2rem
+            border-bottom: $line
+            border-radius: 10rem
+            text-indent: 1.5rem
+
     &__button
         display: flex
         padding: 2rem 1.5rem
-        border: none
         background-color: transparent
-        cursor: pointer
 
         &:focus
             outline: none
