--- a/react-app/src/assets/sass/components/nav/_navIcon.sass
+++ b/react-app/src/assets/sass/components/nav/_navIcon.sass
@@ -5,6 +5,9 @@
         padding: 2rem 1.5rem
         cursor: pointer
 
+        @include respond-to(L)
+            padding: 2rem 1rem
+
     &__icon
         width: 1.7rem
         height: 1.7rem
