--- a/react-app/src/assets/sass/layout/_footer.sass
+++ b/react-app/src/assets/sass/layout/_footer.sass
@@ -2,10 +2,10 @@
 // ---------------------------------
 .footer
     display: grid
-    grid-column: full-start / side-right-end
+    grid-column: side-start / -1
     grid-template-columns: 1fr max-content
     grid-gap: 2rem
-    padding: 6rem 0 4rem
+    padding: 6rem 6rem 4rem
     background-color: $color-white
     color: $color-primary
 
