--- a/react-app/src/assets/sass/main.sass
+++ b/react-app/src/assets/sass/main.sass
@@ -30,11 +30,15 @@
 // Nav components
 @import 'components/nav/navIcon'
 @import 'components/nav/navigation'
+@import 'components/nav/socialPillBtn'
 
 @import 'components/backdrop'
 @import 'components/button'
 @import 'components/carousel'
 @import 'components/dropdown'
+@import 'components/gallery'
+@import 'components/form/quantity'
+@import 'components/rating'
 @import 'components/slider'
 @import 'components/timer'
 
@@ -49,4 +53,5 @@
 // Import pages
 // ---------------------------------
 @import 'pages/home'
+@import 'pages/product'
 
