--- a/react-app/src/assets/css/style.css
+++ b/react-app/src/assets/css/style.css
@@ -1,8 +1,6 @@
 @charset "UTF-8";
 .fadeIn {
   animation: fadeIn 1s; }
-  .fadeIn--slow {
-    animation: fadeIn 0.5s; }
 
 @keyframes fadeIn {
   0% {
@@ -11,7 +9,9 @@
     opacity: 1; } }
 
 .fadeOut {
-  animation: fadeOut 0.5s; }
+  animation: fadeOut 1s; }
+  .fadeOut--fast {
+    animation: fadeOut 0.5s; }
 
 @keyframes fadeOut {
   0% {
@@ -114,6 +114,18 @@ body {
   color: black;
   font-family: 'Lato', sans-serif;
   font-weight: 400; }
+
+button,
+input,
+select {
+  color: inherit;
+  font-family: inherit; }
+
+button {
+  border: none;
+  cursor: pointer; }
+  button:focus, button:active {
+    outline: none; }
 
 .site-title {
   margin-right: 3rem;
@@ -273,14 +285,10 @@ body {
     margin-left: 1rem;
     padding: 1rem;
     transition: background-color 0.3s;
-    border: none;
     background-color: transparent;
     font-size: 1.5rem;
     font-weight: 600;
-    text-transform: uppercase;
-    cursor: pointer; }
-    .productCard__btn:focus, .productCard__btn:active {
-      outline: none; }
+    text-transform: uppercase; }
     .productCard__btn:hover {
       background-color: #e3e7e8; }
   .productCard__icon-box {
@@ -330,16 +338,12 @@ body {
     padding: 1rem 2rem;
     transform: translate(-2rem, -1rem);
     transition: color 0.3s;
-    border: none;
     background-color: transparent;
-    color: currentColor;
-    cursor: pointer; }
+    color: currentColor; }
     .productCardBig__btn:hover {
       color: black; }
     .productCardBig__btn:hover .dash__line {
       border-bottom: 2px solid black; }
-    .productCardBig__btn:focus, .productCardBig__btn:active {
-      outline: none; }
   .productCardBig__title {
     font-size: 4rem; }
     @media only screen and (max-width: 50em) {
@@ -413,8 +417,6 @@ body {
   border: none;
   border-bottom: 2px solid #e3e7e8;
   background-color: white;
-  color: inherit;
-  font-family: inherit;
   font-size: 1.6rem;
   filter: none; }
   .input:-webkit-autofill, .input:-webkit-autofill:hover, .input:-webkit-autofill:focus {
@@ -482,13 +484,11 @@ body {
     align-self: end;
     justify-self: center;
     padding: 0.7rem 0;
-    border: none;
     border-bottom: 2px solid black;
     background-color: transparent;
     color: black;
     font-size: 1.4rem;
-    text-transform: uppercase;
-    cursor: pointer; }
+    text-transform: uppercase; }
   .login-form__empty-block {
     display: block; }
 
@@ -521,12 +521,15 @@ body {
       border-bottom: 1px solid #e3e7e8;
       opacity: 1;
       text-indent: 3.2rem; }
+    .search__input--pill {
+      margin-right: -4.2rem;
+      border-bottom: 1px solid #e3e7e8;
+      border-radius: 10rem;
+      text-indent: 1.5rem; }
   .search__button {
     display: flex;
     padding: 2rem 1.5rem;
-    border: none;
-    background-color: transparent;
-    cursor: pointer; }
+    background-color: transparent; }
     .search__button:focus {
       outline: none; }
   .search__icon {
@@ -541,12 +544,10 @@ body {
   justify-content: center;
   width: 100%;
   height: 6rem;
-  border: none;
   background-color: black;
   color: white;
   font-size: 1.6rem;
-  text-transform: uppercase;
-  cursor: pointer; }
+  text-transform: uppercase; }
   .btn-submit:active, .btn-submit:focus {
     outline: none; }
 
@@ -555,6 +556,9 @@ body {
   align-items: baseline;
   padding: 2rem 1.5rem;
   cursor: pointer; }
+  @media only screen and (max-width: 75em) {
+    .nav-icon__box {
+      padding: 2rem 1rem; } }
 
 .nav-icon__icon {
   width: 1.7rem;
@@ -615,6 +619,45 @@ body {
     transform: scaleX(1);
     transform-origin: 0 50%; }
 
+.social-pill {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  background-color: black;
+  cursor: pointer; }
+  .social-pill:hover .social-pill__links-box {
+    z-index: 1;
+    width: 20rem; }
+  .social-pill:hover .social-pill__links-box .social-pill__link {
+    transform: translateX(0);
+    opacity: 1; }
+  .social-pill__links-box {
+    display: flex;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    transition: width 0.1s ease-in;
+    border-radius: 25px;
+    background-color: black; }
+  .social-pill__link {
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+    opacity: 0; }
+    .social-pill__link:nth-child(2), .social-pill__link:nth-child(3), .social-pill__link:nth-child(4) {
+      transform: translateX(-1rem); }
+  .social-pill__icon {
+    width: 5rem;
+    height: 5rem;
+    padding: 1.5rem;
+    fill: white; }
+
 .backdrop {
   position: fixed;
   z-index: 100;
@@ -632,14 +675,11 @@ body {
   font-size: 1.2rem;
   font-weight: 700;
   line-height: 7rem;
-  text-transform: uppercase;
-  cursor: pointer; }
+  text-transform: uppercase; }
   @media only screen and (max-width: 31.25em) {
     .btn {
       width: 17rem;
       line-height: 5rem; } }
-  .btn:focus, .btn:active {
-    outline: none; }
   .btn--white {
     transition: border 0.3s, background-color 0.3s, color 0.3s;
     background-color: white;
@@ -653,16 +693,11 @@ body {
   position: relative;
   width: fit-content;
   padding: 1.5rem 0;
-  border: none;
   background-color: white;
-  font-family: inherit;
-  font-size: 1.6rem;
-  cursor: pointer; }
+  font-size: 1.6rem; }
   .btn-link--small {
     padding: 1rem 0;
     font-size: 1.4rem; }
-  .btn-link:focus, .btn-link:active {
-    outline: none; }
 
 .full-underline:hover::before {
   transform: scaleX(1);
@@ -688,10 +723,8 @@ body {
   position: relative;
   width: fit-content;
   padding: 1rem 0;
-  border: none;
   background-color: transparent;
-  font-size: 1.5rem;
-  cursor: pointer; }
+  font-size: 1.5rem; }
   .btn-underline:hover::before {
     width: 100%; }
   .btn-underline:before {
@@ -704,8 +737,6 @@ body {
     height: 1.5px;
     transition: width 0.4s;
     background-color: currentColor; }
-  .btn-underline:focus, .btn-underline:active {
-    outline: none; }
   .btn-underline--white {
     color: white; }
 
@@ -717,10 +748,7 @@ body {
   background-color: transparent;
   color: black;
   font-size: 1.2rem;
-  text-transform: uppercase;
-  cursor: pointer; }
-  .btn-outline:focus, .btn-outline:active {
-    outline: none; }
+  text-transform: uppercase; }
   .btn-outline--grey {
     transition: border 0.3s, color 0.3s; }
     .btn-outline--grey:hover {
@@ -733,15 +761,11 @@ body {
   bottom: 0;
   width: 12rem;
   height: 12rem;
-  border: none;
-  background-color: #161619;
-  cursor: pointer; }
+  background-color: #161619; }
   @media only screen and (max-width: 31.25em) {
     .btn-square {
       width: 6rem;
       height: 6rem; } }
-  .btn-square:focus, .btn-square:active {
-    outline: none; }
   .btn-square:hover .btn-square__icon {
     margin-left: 0.8rem; }
   .btn-square__icon {
@@ -757,11 +781,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 2rem 1rem;
-  border: none;
-  background: transparent;
-  cursor: pointer; }
-  .hamburger-btn:focus, .hamburger-btn:active {
-    outline: none; }
+  background: transparent; }
   .hamburger-btn__icon {
     position: relative; }
     .hamburger-btn__icon, .hamburger-btn__icon::before, .hamburger-btn__icon::after {
@@ -786,6 +806,25 @@ body {
     top: 0;
     transform: rotate(-135deg); }
 
+.circle-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  border: 5px solid transparent;
+  border-radius: 50%;
+  background-color: #cdcfd0;
+  background-clip: padding-box; }
+  .circle-btn:hover {
+    background-color: black; }
+  .circle-btn--active {
+    border-color: #cdcfd0;
+    background-color: black; }
+  .circle-btn:not(:last-child) {
+    margin-right: 1rem; }
+
 .carousel {
   display: flex;
   position: relative;
@@ -794,6 +833,9 @@ body {
   height: 100%; }
   .carousel__img {
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -840,6 +882,116 @@ body {
     transition: transform 0.4s;
     fill: black; }
 
+.gallery {
+  display: flex;
+  position: relative;
+  align-items: center;
+  width: 100%;
+  height: 100%; }
+  .gallery__btn-box {
+    position: absolute; }
+  .gallery__btn-num {
+    display: flex;
+    flex-direction: column;
+    width: 6rem; }
+  .gallery__btn {
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    color: black;
+    font-size: 1.6rem;
+    font-weight: 700; }
+    .gallery__btn:not(:last-child) {
+      margin-bottom: 2rem; }
+    .gallery__btn::before {
+      content: '';
+      display: inline-block;
+      width: 0;
+      height: 1px;
+      margin-right: 1.5rem;
+      transition: width 0.3s ease;
+      background-color: black; }
+    .gallery__btn--active::before {
+      width: 2rem; }
+  .gallery__wrapper {
+    visibility: hidden;
+    z-index: -10;
+    width: 100%;
+    padding-left: 6rem; }
+  .gallery__img {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-left: 6rem;
+    object-fit: cover; }
+    .gallery__img--fadeIn {
+      animation: fadeIn 0.5s ease-in-out; }
+    .gallery__img--fadeOut {
+      animation: fadeOut 0.5s ease-in-out; }
+  @media only screen and (max-width: 62.5em) {
+    .gallery__img {
+      padding-left: 0; } }
+  @media only screen and (max-width: 37.5em) {
+    .gallery__btn-box {
+      bottom: 0;
+      padding: 0 0 2rem 2rem; }
+    .gallery__btn-circle {
+      display: flex; }
+    .gallery__btn-num {
+      display: none; } }
+  @media only screen and (min-width: 37.5em) {
+    .gallery__btn-circle {
+      display: none; } }
+
+.quantity {
+  display: flex;
+  transition: border-color 0.3s;
+  border: 1px solid #cdcfd0; }
+  .quantity:hover {
+    border-color: black; }
+  .quantity__btn {
+    padding: 1.5rem 2rem;
+    background-color: transparent; }
+    .quantity__btn:hover .quantity__btn-icon {
+      fill: black; }
+  .quantity__btn-icon {
+    width: 1.2rem;
+    height: 1.2rem;
+    transition: fill 0.3s;
+    fill: #7f8487; }
+  .quantity__input {
+    -moz-appearance: textfield;
+    width: 3.5rem;
+    border: none;
+    background: 0 0;
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center; }
+
+.rating {
+  position: relative; }
+  .rating__max {
+    display: block;
+    fill: #cdcfd0; }
+  .rating__users {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    fill: #ffb22d;
+    white-space: nowrap; }
+  .rating__star {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    vertical-align: middle; }
+    .rating__star:not(:last-child) {
+      margin-right: 5px; }
+
 .slider {
   display: flex;
   position: absolute;
@@ -857,12 +1009,8 @@ body {
     height: 5rem;
     transform: translateY(-6rem);
     transition: opacity 0.4s cubic-bezier(1, 0, 0, 1);
-    border: none;
     opacity: 0;
-    background-color: white;
-    cursor: pointer; }
-    .slider__btn:focus, .slider__btn:active {
-      outline: none; }
+    background-color: white; }
     .slider__btn--next {
       right: 0; }
     .slider__btn--prev {
@@ -942,10 +1090,10 @@ body {
 
 .footer {
   display: grid;
-  grid-column: full-start / side-right-end;
+  grid-column: side-start / -1;
   grid-template-columns: 1fr max-content;
   grid-gap: 2rem;
-  padding: 6rem 0 4rem;
+  padding: 6rem 6rem 4rem;
   background-color: white;
   color: black; }
   .footer__nav {
@@ -1084,12 +1232,15 @@ body {
     visibility: hidden;
     align-items: center;
     justify-content: center;
-    width: 7rem;
-    height: 7rem; }
+    width: 6rem;
+    height: 6rem; }
     @media only screen and (max-width: 75em) {
       .header__hamburger-box {
         visibility: visible;
-        height: 6rem; } }
+        margin-left: 2rem; } }
+    @media only screen and (max-width: 50em) {
+      .header__hamburger-box {
+        margin-left: 0; } }
   .header__account {
     position: relative; }
     .header__account:hover .header__account-links {
@@ -1098,15 +1249,9 @@ body {
       pointer-events: initial; }
   .header__account-link {
     padding: 2rem;
-    border: none;
     background-color: transparent;
     color: black;
-    font-family: inherit;
-    font-size: 1.4rem;
-    text-decoration: none;
-    cursor: pointer; }
-    .header__account-link:focus, .header__account-link:active {
-      outline: none; }
+    font-size: 1.4rem; }
   .header__account-links {
     display: grid;
     position: absolute;
@@ -1189,7 +1334,8 @@ body {
 .container {
   display: grid;
   grid-template-columns: [side-start] 6rem [side-end full-start] 6rem [center-start] repeat(8, [col-start] 1fr [col-end]) [center-end side-right-start] 6rem [side-right-end] 6rem [full-end];
-  grid-template-rows: 12rem calc(100vh - 12rem) min-content 50vw; }
+  grid-template-rows: 12rem calc(100vh - 12rem) min-content 50vw;
+  background-color: white; }
   @media only screen and (max-width: 75em) {
     .container {
       grid-template-rows: 6rem calc(100vh - 6rem) min-content 60vw; } }
@@ -1278,8 +1424,7 @@ body {
   grid-column: full-start / side-right-end;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 5rem;
-  padding: 20rem 0;
-  background-color: white; }
+  padding: 20rem 0; }
   @media only screen and (max-width: 75em) {
     .products {
       grid-column: side-start / -1;
@@ -1385,8 +1530,6 @@ body {
     padding: 1.7rem 2rem;
     transition: border 0.4s, padding 0.4s;
     border: 1px solid black;
-    color: inherit;
-    font-family: inherit;
     font-size: 1.5rem; }
     @media only screen and (max-width: 75em) {
       .subscribe__input {
@@ -1405,8 +1548,7 @@ body {
     font-weight: 700;
     cursor: pointer; }
   .subscribe__left-card, .subscribe__right-card {
-    padding: 12rem 6rem;
-    background-color: white; }
+    padding: 12rem 6rem; }
     @media only screen and (max-width: 75em) {
       .subscribe__left-card, .subscribe__right-card {
         padding: 12rem 4rem; } }
@@ -1489,3 +1631,185 @@ body {
   font-weight: 700;
   text-decoration: none;
   text-transform: uppercase; }
+
+.product {
+  display: grid;
+  grid-template-columns: [side-start] 6rem [side-end full-start] 6rem [center-start] repeat(8, [col-start] 1fr [col-end]) [center-end side-right-start] 6rem [side-right-end] 6rem [full-end];
+  grid-template-rows: 12rem 8rem;
+  background-color: #eef4e8; }
+  .product .header {
+    z-index: 50;
+    grid-column: side-start / -1;
+    padding-right: 6rem;
+    transition: background-color 0.25s ease; }
+    .product .header:hover {
+      background-color: white; }
+  .product__gallery-box {
+    grid-column: full-start / col-end 5;
+    grid-row: 1 / 4; }
+  .product__summary-box {
+    display: grid;
+    grid-column: col-start 6 / center-end;
+    grid-row: 3 / 4;
+    grid-template-rows: repeat(6, min-content);
+    grid-gap: 1.5rem;
+    padding: 0 0 5rem 5rem; }
+  .product__social-box {
+    grid-column: full-start / center-start;
+    grid-row: 3 / 4;
+    align-self: end;
+    padding-bottom: 5rem; }
+    .product__social-box .social-pill {
+      margin-bottom: 1rem; }
+  .product__rating-box {
+    display: flex;
+    align-items: center; }
+    .product__rating-box button {
+      margin-left: 1.5rem; }
+  .product__sizes-box .product__text,
+  .product__colors-box .product__text {
+    margin-bottom: 1rem; }
+  .product__sizes-box, .product__colors-box {
+    display: grid;
+    grid-gap: 2rem; }
+  .product__sizes-box {
+    grid-template-columns: repeat(auto-fill, 3rem);
+    margin-bottom: 1rem; }
+  .product__colors-box {
+    grid-template-columns: repeat(auto-fill, 2.5rem);
+    margin-bottom: 4.5rem; }
+  .product__meta-box {
+    display: grid;
+    grid-gap: 1rem;
+    margin-top: 3rem; }
+  .product__form {
+    display: grid;
+    grid-template-rows: repeat(2, max-content);
+    grid-gap: 1rem;
+    margin-top: 2rem; }
+    .product__form .btn-submit {
+      margin-left: 2rem; }
+  .product__form-qty-box {
+    display: flex; }
+  .product__title {
+    font-size: 3rem;
+    font-weight: 400; }
+  .product__text {
+    font-size: 1.4rem;
+    line-height: 1.5; }
+  .product__review-btn, .product__btn-link {
+    transition: color 0.3s, text-shadow 0.3s;
+    background-color: transparent;
+    font-weight: 700; }
+  .product__review-btn {
+    color: #7f8487;
+    font-size: 1.2rem;
+    text-transform: capitalize; }
+    .product__review-btn:hover {
+      color: black; }
+  .product__btn-link {
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 1.1rem;
+    text-transform: uppercase; }
+    .product__btn-link:hover {
+      color: black;
+      text-shadow: 0 0 0.5px #7f8487, 0 0 0.5px #7f8487; }
+  .product__price {
+    margin-top: 1.5rem;
+    font-size: 3rem; }
+  .product__tag {
+    display: inline-block;
+    width: 8.5rem;
+    color: #7f8487;
+    font-size: 1.1rem;
+    text-transform: uppercase; }
+  .product__btn-size, .product__btn-color {
+    width: 3rem;
+    height: 3rem; }
+  .product__btn-size {
+    padding-bottom: 1rem;
+    transition: border-color 0.3s, color 0.3s;
+    border-bottom: 2px solid transparent;
+    background-color: transparent;
+    color: #7f8487;
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase; }
+    .product__btn-size--active {
+      border-color: black;
+      color: black; }
+  .product__btn-color {
+    position: relative;
+    width: 2.5rem;
+    height: 2.5rem; }
+    .product__btn-color::after {
+      content: '';
+      display: inline-block;
+      position: absolute;
+      bottom: -1.5rem;
+      left: 0;
+      width: 2.5rem;
+      height: 1.5px;
+      transition: background-color 0.3s;
+      background-color: transparent; }
+    .product__btn-color--active::after {
+      background-color: black; }
+  .product__divider {
+    margin: 3rem 0 0;
+    border: none;
+    border-bottom: 1px solid #e3e7e8; }
+  @media only screen and (min-width: 62.5em) {
+    .product__divider {
+      display: none; } }
+  @media only screen and (max-width: 75em) {
+    .product {
+      grid-template-rows: 6rem 8rem; }
+      .product .header {
+        padding-right: 0; }
+      .product__gallery-box {
+        grid-column: side-start / col-end 5;
+        padding-left: 4rem; }
+      .product__summary-box {
+        grid-column: col-start 6 / -1;
+        padding: 0 4rem 5rem 0; }
+      .product__social-box {
+        grid-column: side-start / side-end;
+        padding-bottom: 2rem;
+        padding-left: 4rem; } }
+  @media only screen and (max-width: 62.5em) {
+    .product__gallery-box {
+      grid-column: side-start / -1;
+      grid-row: 2 / 4;
+      padding: 0 4rem; }
+    .product__summary-box {
+      grid-column: side-start / -1;
+      grid-row: 4 / 5;
+      padding: 6rem 4rem 0;
+      background-color: white; }
+    .product__social-box {
+      grid-column: side-right-start / -1;
+      justify-self: end;
+      padding-right: 4rem;
+      padding-bottom: 0;
+      transform: translateY(50%); }
+      .product__social-box .social-pill {
+        margin-bottom: 0; } }
+  @media only screen and (max-width: 50em) {
+    .product__gallery-box {
+      padding: 0 2rem; }
+    .product__summary-box {
+      padding: 6rem 2rem 0; }
+    .product__social-box {
+      padding-right: 2rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .product__form-qty-box {
+      flex-direction: column; }
+    .product__form .btn-submit {
+      margin-top: 2rem;
+      margin-left: 0; }
+    .product__form .quantity__input {
+      flex: 1; } }
+  @media only screen and (max-width: 31.25em) {
+    .product__summary-box {
+      padding: 4rem 2rem 0; } }
