--- a/react-app/src/assets/sass/abstracts/_maps.sass
+++ b/react-app/src/assets/sass/abstracts/_maps.sass
@@ -9,5 +9,5 @@
 // XS: 600px
 // XXS: 500px
 // XXXS: 400px
-$breakpoints: (XL: (max-width: 81.25em), L: (max-width: 75em), L-min: (min-width: 75em), M: (max-width: 62.5em), S: (max-width: 50em), XS: (max-width: 37.5em), XXS: (max-width: 31.25em), XXXS: (max-width: 25em))
+$breakpoints: (XL: (max-width: 81.25em), L: (max-width: 75em), L-min: (min-width: 75em), M: (max-width: 62.5em), M-min: (min-width: 62.5em), S: (max-width: 50em), XS: (max-width: 37.5em), XS-min: (min-width: 37.5em), XXS: (max-width: 31.25em), XXXS: (max-width: 25em))
 
