--- a/react-app/src/assets/sass/base/_typography.sass
+++ b/react-app/src/assets/sass/base/_typography.sass
@@ -3,6 +3,20 @@ body
     font-family: 'Lato', sans-serif
     font-weight: 400
 
+button,
+input,
+select
+    color: inherit
+    font-family: inherit
+
+button
+    border: none
+    cursor: pointer
+
+    &:focus,
+    &:active
+        outline: none
+
 .site-title
     margin-right: 3rem
     font-size: 2.2rem
