--- a/react-app/src/assets/sass/components/_button.sass
+++ b/react-app/src/assets/sass/components/_button.sass
@@ -8,15 +8,10 @@
     font-weight: 700
     line-height: 7rem
     text-transform: uppercase
-    cursor: pointer
 
     @include respond-to(XXS)
         width: 17rem
         line-height: 5rem
-
-    &:focus,
-    &:active
-        outline: none
 
     &--white
         transition: border 0.3s, background-color 0.3s, color 0.3s
@@ -34,19 +29,12 @@
     position: relative
     width: fit-content
     padding: 1.5rem 0
-    border: none
     background-color: $color-white
-    font-family: inherit
     font-size: $default-font-size
-    cursor: pointer
 
     &--small
         padding: 1rem 0
         font-size: 1.4rem
-
-    &:focus,
-    &:active
-        outline: none
 
 .full-underline
     &:hover::before
@@ -76,10 +64,8 @@
     position: relative
     width: fit-content
     padding: 1rem 0
-    border: none
     background-color: transparent
     font-size: $small-font-size
-    cursor: pointer
 
     &:hover::before
         width: 100%
@@ -95,10 +81,6 @@
         transition: width 0.4s
         background-color: currentColor
 
-    &:focus,
-    &:active
-        outline: none
-
     &--white
         color: $color-white
 
@@ -113,11 +95,6 @@
     color: $color-primary
     font-size: 1.2rem
     text-transform: uppercase
-    cursor: pointer
-
-    &:focus,
-    &:active
-        outline: none
 
     &--grey
         transition: border 0.3s, color 0.3s
@@ -134,17 +111,11 @@
     bottom: 0
     width: 12rem
     height: 12rem
-    border: none
     background-color: $color-primary-light
-    cursor: pointer
 
     @include respond-to(XXS)
         width: 6rem
         height: 6rem
-
-    &:focus,
-    &:active
-        outline: none
 
     &:hover  &__icon
         margin-left: 0.8rem
@@ -164,13 +135,7 @@
     align-items: center
     justify-content: center
     padding: 2rem 1rem
-    border: none
     background: transparent
-    cursor: pointer
-
-    &:focus,
-    &:active
-        outline: none
 
     &__icon
         position: relative
@@ -207,4 +172,26 @@
         top: 0
         transform: rotate(-135deg)
 
+// Circle button
+// -----------------------------------------
+.circle-btn
+    display: flex
+    align-items: center
+    justify-content: center
+    width: 2rem
+    height: 2rem
+    transition: background-color 0.3s ease, border-color 0.3s ease
+    border: 5px solid transparent
+    border-radius: 50%
+    background-color: $color-grey-light-2
+    background-clip: padding-box
 
+    &:hover
+        background-color: $color-primary
+
+    &--active
+        border-color: $color-grey-light-2
+        background-color: $color-primary
+
+    &:not(:last-child)
+        margin-right: 1rem
