--- a/react-app/src/assets/sass/layout/_header.sass
+++ b/react-app/src/assets/sass/layout/_header.sass
@@ -41,12 +41,15 @@
         visibility: hidden
         align-items: center
         justify-content: center
-        width: 7rem
-        height: 7rem
+        width: 6rem
+        height: 6rem
 
         @include respond-to(L)
             visibility: visible
-            height: 6rem
+            margin-left: 2rem
+
+        @include respond-to(S)
+            margin-left: 0
 
     &__account
         position: relative
@@ -58,17 +61,9 @@
 
     &__account-link
         padding: 2rem
-        border: none
         background-color: transparent
         color: $color-primary
-        font-family: inherit
         font-size: 1.4rem
-        text-decoration: none
-        cursor: pointer
-
-        &:focus,
-        &:active
-            outline: none
 
     &__account-links
         display: grid
